WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219874
[Media in GPU Process][MSE] Fix crashes in a debug build
https://bugs.webkit.org/show_bug.cgi?id=219874
Summary
[Media in GPU Process][MSE] Fix crashes in a debug build
Peng Liu
Reported
2020-12-14 14:23:30 PST
[Media in GPU Process][MSE] Fix crashes in a debug build
Attachments
Patch
(7.30 KB, patch)
2020-12-14 14:32 PST
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peng Liu
Comment 1
2020-12-14 14:32:50 PST
Created
attachment 416195
[details]
Patch
EWS
Comment 2
2020-12-14 16:13:05 PST
Committed
r270807
: <
https://trac.webkit.org/changeset/270807
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416195
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-12-14 16:14:27 PST
<
rdar://problem/72319015
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug